# src/main/java/com/solaredge/restaurantreservations/api/model/ReservationDto.java
@@ -1,0 +1,4 @@
+package com.solaredge.restaurantreservations.api.model;
+
+public class ReservationDto {
+}
