# src/main/java/com/solaredge/restaurantreservations/api/model/RestaurantSetDto.java
@@ -1,0 +1,17 @@
+package com.solaredge.restaurantreservations.api.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Value;
+
+import java.util.HashSet;
+import java.util.Set;
+
+@Value
+@AllArgsConstructor
+public class RestaurantSetDto {
+    Set<RestaurantDto> restaurants;
+
+    public RestaurantSetDto() {
+        this(new HashSet<>());
+    }
+}
