# src/main/java/com/solaredge/restaurantreservations/api/model/TableSetDto.java
@@ -1,0 +1,7 @@
+package com.solaredge.restaurantreservations.api.model;
+
+import java.util.Set;
+
+public class TableSetDto {
+    Set<TableDto> tables;
+}
